# p2d

./: CMakeLists.txt  README.md  TODO.md
.github/workflows/: compile-tests.yaml
backup/: joint.c
include/p2d/: collide.h  contacts.h  core.h  detection.h  export.h  helpers.h  joint.h  log.h  p2d.h  pairs.h  queue.h  resolution.h  types.h  world.h
src/: collide.c  contacts.c  core.c  detection.c  helpers.c  joint.c  log.c  p2d.c  pairs.c  queue.c  resolution.c  types.c  world.c
test/: CMakeLists.txt
test/include/: main.hpp
test/src/: main.cpp
